starting trainer signups

--- a/app/src/main/res/layout/activity_trainer__details.xml
+++ b/app/src/main/res/layout/activity_trainer__details.xml
@@ -84,18 +84,17 @@
         app:layout_constraintTop_toBottomOf="@+id/trainer_email" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/trainer_join"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:layout_marginBottom="100dp"
+        android:text="Sign Up With This Trainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trainer_bio"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/trainer_bio" />
 </androidx.constraintlayout.widget.ConstraintLayout>
