--- a/app/src/main/res/layout/activity_user__registration.xml
+++ b/app/src/main/res/layout/activity_user__registration.xml
@@ -91,6 +91,7 @@
         app:layout_constraintTop_toBottomOf="@+id/reg_first_name" />
 
     <EditText
+        android:visibility="gone"
         android:id="@+id/reg_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
