--- a/app/src/main/res/layout/view_workouts_layout.xml
+++ b/app/src/main/res/layout/view_workouts_layout.xml
@@ -15,34 +15,41 @@
             android:layout_height="125dp">
 
             <TextView
-                android:id="@+id/trainer_infocard"
-                android:layout_width="293dp"
-                android:layout_height="110dp"
+                android:id="@+id/workout_infocard"
+                android:layout_width="244dp"
+                android:layout_height="56dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
                 android:textColor="#FDFDFD"
                 android:textSize="28sp"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/more_trainerinfo"
+                android:id="@+id/more_workoutinfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:textColor="#FDFDFD"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.89"
-                app:layout_constraintStart_toEndOf="@+id/trainer_infocard"
+                app:layout_constraintStart_toEndOf="@+id/workout_infocard"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_dialog_info" />
+
+            <TextView
+                android:id="@+id/workout_somedetails"
+                android:layout_width="239dp"
+                android:layout_height="43dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/workout_infocard"
+                app:layout_constraintVertical_bias="0.0" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
