--- a/app/src/main/res/layout/activity_user__registration.xml
+++ b/app/src/main/res/layout/activity_user__registration.xml
@@ -11,7 +11,7 @@
         android:layout_width="295dp"
         android:layout_height="56dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
         android:text="Create a Client Profile"
         android:textAlignment="center"
@@ -59,8 +59,9 @@
         android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reg_password" />
+        app:layout_constraintTop_toBottomOf="@+id/reg_interests" />
 
     <EditText
         android:id="@+id/reg_first_name"
@@ -104,5 +105,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_last_name" />
+
+    <EditText
+        android:id="@+id/reg_interests"
+        android:hint="Interests"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:gravity="start|top"
+        android:inputType="textMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/reg_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
