--- a/app/src/main/res/layout/activity_view__appointments2.xml
+++ b/app/src/main/res/layout/activity_view__appointments2.xml
@@ -4,28 +4,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View_Workouts">
+    tools:context=".View_Appointments">
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/View_Appts_Title"
+        android:layout_width="317dp"
+        android:layout_height="137dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="68dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="My Workouts"
+        android:textAlignment="center"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/workouts_recycler"
+        app:layout_constraintBottom_toTopOf="@+id/View_Appointments_RecyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/workouts_recycler"
-        android:layout_width="393dp"
-        android:layout_height="508dp"
+        android:id="@+id/View_Appointments_RecyclerView"
+        android:layout_width="391dp"
+        android:layout_height="504dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
