--- a/app/src/main/res/layout/activity_user__registration.xml
+++ b/app/src/main/res/layout/activity_user__registration.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     tools:context=".User_Registration">
 
     <TextView
@@ -13,9 +14,10 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="8dp"
-        android:text="Create a Client Profile"
+        android:text="Create a Client Account"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -29,6 +31,9 @@
         android:layout_marginEnd="8dp"
         android:ems="10"
         android:hint="Email"
+        android:textColorHint="#fff"
+        android:textColor="#fff"
+        android:backgroundTint="#ffffff"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,6 +49,9 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColorHint="#fff"
+        android:textColor="#fff"
+        android:backgroundTint="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_email" />
@@ -56,7 +64,9 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:text="Register"
+        android:textColor="#fff"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -73,6 +83,9 @@
         android:ems="10"
         android:hint="First name"
         android:inputType="textPersonName"
+        android:backgroundTint="#ffffff"
+        android:textColorHint="#fff"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -87,6 +100,9 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
+        android:backgroundTint="#ffffff"
+        android:textColorHint="#fff"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_first_name" />
@@ -102,6 +118,9 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
+        android:backgroundTint="#ffffff"
+        android:textColorHint="#fff"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_last_name" />
@@ -117,6 +136,9 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
+        android:backgroundTint="#ffffff"
+        android:textColorHint="#fff"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/reg_password" />
