--- a/app/src/main/res/layout/activity_view__trainers.xml
+++ b/app/src/main/res/layout/activity_view__trainers.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     tools:context=".View_Trainers">
 
     <TextView
@@ -17,6 +18,7 @@
         android:textAlignment="center"
         android:gravity="center"
         android:textSize="36sp"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
