--- a/app/src/main/res/layout/activity_trainer__details.xml
+++ b/app/src/main/res/layout/activity_trainer__details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000"
     tools:context=".Trainer_Details">
 
     <TextView
@@ -17,6 +18,7 @@
         android:text="NAME_HERE"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +34,7 @@
         android:gravity="center"
         android:text="AGE"
         android:textSize="24sp"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trainer_name" />
@@ -47,6 +50,7 @@
         android:text="YEARS_EXP"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,6 +67,7 @@
         android:text="EMAIL"
         android:textAlignment="center"
         android:textSize="24sp"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -79,6 +84,7 @@
         android:text="BIO"
         android:textAlignment="center"
         android:textSize="30sp"
+        android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trainer_email" />
@@ -92,6 +98,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="100dp"
         android:text="Sign Up With This Trainer"
+        android:background="@color/colorPrimary"
+        android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
