--- a/app/src/main/res/layout/activity_trainer__details.xml
+++ b/app/src/main/res/layout/activity_trainer__details.xml
@@ -41,16 +41,16 @@
 
     <TextView
         android:id="@+id/trainer_years"
-        android:layout_width="250dp"
-        android:layout_height="75dp"
+        android:layout_width="253dp"
+        android:layout_height="43dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="YEARS_EXP"
         android:textAlignment="center"
-        android:textSize="24sp"
         android:textColor="#fff"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -58,34 +58,35 @@
 
     <TextView
         android:id="@+id/trainer_email"
-        android:layout_width="300dp"
-        android:layout_height="53dp"
+        android:layout_width="302dp"
+        android:layout_height="51dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:gravity="center"
         android:text="EMAIL"
         android:textAlignment="center"
-        android:textSize="24sp"
         android:textColor="#fff"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/trainer_years" />
+        app:layout_constraintTop_toBottomOf="@+id/trainer_gender" />
 
     <TextView
         android:id="@+id/trainer_bio"
-        android:layout_width="343dp"
-        android:layout_height="153dp"
+        android:layout_width="362dp"
+        android:layout_height="163dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="16dp"
+
         android:layout_marginEnd="8dp"
-        android:gravity="center"
         android:text="BIO"
         android:textAlignment="center"
-        android:textSize="30sp"
         android:textColor="#fff"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trainer_email" />
 
@@ -96,13 +97,29 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="100dp"
-        android:text="Sign Up With This Trainer"
+        android:layout_marginBottom="56dp"
         android:background="@color/colorPrimary"
+        android:text="Sign Up With This Trainer"
         android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trainer_bio" />
+
+    <TextView
+        android:id="@+id/trainer_gender"
+        android:layout_width="302dp"
+        android:layout_height="53dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="center"
+        android:text="GENDER"
+        android:textAlignment="center"
+        android:textColor="#fff"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/trainer_years" />
 </androidx.constraintlayout.widget.ConstraintLayout>
