--- a/app/src/main/res/layout/activity_trainer__details.xml
+++ b/app/src/main/res/layout/activity_trainer__details.xml
@@ -122,4 +122,17 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/trainer_years" />
+
+    <ImageView
+        android:id="@+id/people"
+        android:layout_width="174dp"
+        android:layout_height="178dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/people" />
 </androidx.constraintlayout.widget.ConstraintLayout>
